# bills-manager

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  env-sample.ini  env.sample  pyproject.toml
.github/workflows/: ci.yaml
apps/bills/: controllers.py  repositories.py  routers.py  services.py
apps/core/: controllers.py  models.py  repositories.py  routers.py  schemas.py  services.py
cli/: commands.py
conf/: asgi.py  db.py  routers.py  settings.py
conf/middleware/: allowed_hosts.py  cors.py
conf/settings/: __init__.py  base.py  development.py  production.py  staging.py  test.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_auto_04f6a41c78f3.py  0001_auto_2ce9d410e527.py  0001_auto_6d70f931d306.py  0001_initial_migration.py  0001_initial_migration_initial_migration.py  caeecca0f4a1_hello_world.py
scripts/: Dockerfile.local  Dockerfile.test  docker-compose-local.yaml  docker-compose-test.yaml  startup.sh
shared/: connection_handler.py  database.py  db_handler.py  models.py  types.py  utils.py
shared/types/: __init__.py  asgi.py
tests/: conftest.py
tests/apps/bills/: conftest.py  test_controllers.py
tests/apps/core/: conftest.py  test_controllers.py
