[tool.poetry]
name = "Bills Manager"
version = "1.0.0"
description = "A bill manager project"
authors = ["firminoneto11 <firminoneto11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
sqlalchemy = "2.0.*"
environs = "11.0.*"
alembic = "1.13.*"
fastapi = "0.111.*"
uvicorn = "0.29.*"
uvloop = "0.19.*"
httptools = "0.6.*"
httpx = "0.27.*"
asyncpg = "0.29.*"
typer = "0.12.*"
python-slugify = "8.0.*"

[tool.poetry.group.dev.dependencies]
ruff = "0.3.*"
pytest = "8.1.*"
coverage = "7.4.*"
pytest-sugar = "1.0.*"
pytest-asyncio = "0.23.*"
pytest-env = "1.1.*"
aiosqlite = "0.20.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configs
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configs
[tool.pytest.ini_options]
addopts = "-s -v --durations=5"
markers = ["bug", "this"]
asyncio_mode = "auto"

# Pytest-Env configs
[tool.pytest_env]
BILLS_MANAGER_ENVIRONMENT = "test"

# Coverage configs
[tool.coverage.run]
omit = [
    "test/*",
    "tests/*",
    "*conftest.py",
    "venv/*",
    "manage.py",
    "cli/*",
    ".venv/*",
]
data_file = ".coverage/coverage"
branch = false

[tool.coverage.report]
skip_covered = true
precision = 2
fail_under = 80
exclude_also = ["if TYPE_CHECKING:", "match module:"]

[tool.coverage.html]
directory = ".coverage/html-report"
skip_covered = true
